--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <ul>
-            <li></li>
+            
         </ul>
-        <script scr="/js/app.js"></script>
+        <script type="text/javascript" scr="/js/app.js"></script>
     </body>
 </html>
