--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <ul>
             
         </ul>
-        <script type="text/javascript" scr="/js/app.js"></script>
+        <script src="/js/app.js"></script>
     </body>
 </html>
