--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
         <title>Solmon Cookie Shop</title>
         <link rel="resetsheet" href="css/reset.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Beth+Ellen|Bigelow+Rules|Codystar|Ewert|Flavors|Fredericka+the+Great|Frijole|Knewave|Monofett|Nosifer|Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <ul>
+        
+        <header>
             
-        </ul>
+            <h1>Pat's Salmon Cookie Shop</h1>
+            <h6>Forget the rest, this is the best!!!</h6>
+            <nav>
+                <ul class="sidenav">
+                    <li><a href="index.html" class="nav-link">HOME</a><br /></li>
+                    <li><a href="cookie.html" class="nav-link">COOKIES</a><br /></li>
+                    <li><a href="shop.html" class="nav-link">SHOP</a><br /></li>
+                    <li><a href="about.html" class="nav-link">ABOUT</a><br /></li>
+                    <li><a href="locations" class="nav-link">LOCATIONS</a><br /></li>
+                    <li><a href="sales.html" class="nav-link">LOGIN</a><br /></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <img src="http://www.earthlingenterprises.ca/earthlingenterprises/Media/animated%20salmon.gif">
+            <h5>We are proud to serve Seattle more than a decade....</h5>
+        </section>
         <script src="/js/app.js"></script>
+        <footer>
+            <p id="trademark">Pat's Salmon Cookies is a registered trademark of BOND, Inc.</p>
+            <p id="self-credit"> This Website was designed by BOND, JAMES BOND PRODUCTIONS &#169; 2019</p>
+        </footer>
     </body>
 </html>
