sales html updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="shop.html" class="nav-link">SHOP</a><br /></li>
                     <li><a href="about.html" class="nav-link">ABOUT</a><br /></li>
                     <li><a href="locations" class="nav-link">LOCATIONS</a><br /></li>
-                    <li><a href="sales.html" class="nav-link">LOGIN</a><br /></li>
+                    <li><a href="sales.html" class="nav-link">SALES</a><br /></li>
                 </ul>
             </nav>
         </header>
