--- a/sales.html
+++ b/sales.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Solmon Cookie Shop</title>
         <link rel="resetsheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/sales.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Beth+Ellen|Bigelow+Rules|Codystar|Ewert|Flavors|Fredericka+the+Great|Frijole|Knewave|Monofett|Nosifer|Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <h1></h1>
-        <ul>
-        </ul>
-        <script src="/js/sales.js"></script>
+        
+        <header>
+            <h1>Pat's Salmon Cookie Shop</h1>
+            <h4>Sales Information</h4>
+            <nav>
+                <ul class="sidenav">
+                    <li><a href="index.html" class="nav-link">HOME</a><br /></li>
+                    <li><a href="cookie.html" class="nav-link">COOKIES</a><br /></li>
+                    <li><a href="shop.html" class="nav-link">SHOP</a><br /></li>
+                    <li><a href="about.html" class="nav-link">ABOUT</a><br /></li>
+                    <li><a href="locations" class="nav-link">LOCATIONS</a><br /></li>
+                    <li><a href="sales.html" class="nav-link">LOGIN</a><br /></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+          
+        </section>
+        <script src="/js/app.js"></script>
+        <footer>
+            <p id="trademark">Pat's Salmon Cookies is a registered trademark of BOND, Inc.</p>
+            <p id="self-credit"> This Website was designed by BOND, JAMES BOND PRODUCTIONS &#169; 2019</p>
+        </footer>
     </body>
 </html>
