--- a/sales.html
+++ b/sales.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Solmon Cookie Shop</title>
-        <link rel="resetsheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="resetsheet" href="/css/reset.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Beth+Ellen|Bigelow+Rules|Codystar|Ewert|Flavors|Fredericka+the+Great|Frijole|Knewave|Monofett|Nosifer|Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
     </head>
     <body>
@@ -18,14 +18,14 @@
                     <li><a href="shop.html" class="nav-link">SHOP</a><br /></li>
                     <li><a href="about.html" class="nav-link">ABOUT</a><br /></li>
                     <li><a href="locations" class="nav-link">LOCATIONS</a><br /></li>
-                    <li><a href="sales.html" class="nav-link">LOGIN</a><br /></li>
+                    <li><a href="sales.html" class="nav-link">SALES</a><br /></li>
                 </ul>
             </nav>
         </header>
-        <section>
-          
+        <section id="locations">
+            <h6>Sales Projection</h6>
         </section>
-        <script src="/js/app.js"></script>
+        <script src="/js/sales.js"></script>
         <footer>
             <p id="trademark">Pat's Salmon Cookies is a registered trademark of BOND, Inc.</p>
             <p id="self-credit"> This Website was designed by BOND, JAMES BOND PRODUCTIONS &#169; 2019</p>
