--- a/sales.html
+++ b/sales.html
@@ -3,7 +3,7 @@
     <head>
         <title>Solmon Cookie Shop</title>
         <link rel="resetsheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/sales.css">
         <link href="https://fonts.googleapis.com/css?family=Beth+Ellen|Bigelow+Rules|Codystar|Ewert|Flavors|Fredericka+the+Great|Frijole|Knewave|Monofett|Nosifer|Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
     </head>
     <body>
