--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Solmon Cookie Shop</title>
         <link rel="resetsheet" href="css/reset.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Audiowide|Fredericka+the+Great|Fugaz+One|Rock+Salt|Saira+Stencil+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Beth+Ellen|Bigelow+Rules|Codystar|Ewert|Flavors|Fredericka+the+Great|Frijole|Knewave|Monofett|Nosifer|Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
     </head>
     <body>
