change of form location

--- a/sales.html
+++ b/sales.html
@@ -25,15 +25,9 @@
       </header>
       <form id="sales_form">
         <fieldset>
-            <label for="locations1">Store Locations:</label>
-            <select name="locations1">
-            <option value="1st and Pike">1st and Pike</option>           
-            <option value="SeaTac Airport">SeaTac Airport</option>
-            <option value="Seattle Center">Seattle Centert</option>
-            <option value="Capitol Hill">Capitol Hill</option>
-            <option value="Alki">Alki</option>
-            </select>
-        </fieldset>
+          <label for="locations">Max. Customer per hour:</label>
+          <input type="txt" name="maxCustomer1" placeholder="Enter New Location" minlength="3"required>
+      </fieldset>
         <fieldset>
             <label for="maxCustomer1">Max. Customer per hour:</label>
             <input type="number" name="maxCustomer1" placeholder="Enter Nember" minlength="1"required>
