--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
                 </ul>
             </nav>
         </header>
+        <div>
+                <img src="/Salmon-Cookie-Shop/img/chinook.jpg">
+        </div>
         <section>
-            <img src="http://www.earthlingenterprises.ca/earthlingenterprises/Media/animated%20salmon.gif">
-            <h5>We are proud to serve Seattle more than a decade....</h5>
+            <img src="/Salmon-Cookie-Shop/img/family.jpg">
+            <span>We are proud to serve Seattle more than a decade....</span>
         </section>
         <script src="/js/app.js"></script>
         <footer>
