--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
         <header>
             <h1>Pat's Salmon Cookie Shop</h1>
             <h6>Forget the rest, this is the best!!!</h6>
+            <img src="/img/family.jpg">
+            <img id = "fish" src="/img/fish.jpg">
             <nav>
                 <ul class="sidenav">
-                    <li><a href="index.html" class="nav-link">HOME</a><br /></li>
-                    <li><a href="cookie.html" class="nav-link">COOKIES</a><br /></li>
-                    <li><a href="shop.html" class="nav-link">SHOP</a><br /></li>
-                    <li><a href="about.html" class="nav-link">ABOUT</a><br /></li>
-                    <li><a href="locations" class="nav-link">LOCATIONS</a><br /></li>
-                    <li><a href="sales.html" class="nav-link">SALES</a><br /></li>
+                    <li><a href="/index.html" class="nav-link">HOME</a><br /></li>
+                    <li><a href="/cookies.html" class="nav-link">COOKIES</a><br /></li>
+                    <li><a href="/shop.html" class="nav-link">SHOP</a><br /></li>
+                    <li><a href="/about.html" class="nav-link">ABOUT</a><br /></li>
+                    <li><a href="/locations.html" class="nav-link">LOCATIONS</a><br /></li>
+                    <li><a href="/sales.html" class="nav-link">SALES</a><br /></li>
                 </ul>
             </nav>
         </header>
-        <div>
-                <img src="/Salmon-Cookie-Shop/img/chinook.jpg">
-        </div>
         <section>
-            <img src="/Salmon-Cookie-Shop/img/family.jpg">
+            
             <span>We are proud to serve Seattle more than a decade....</span>
         </section>
         <script src="/js/app.js"></script>
