--- a/sales.html
+++ b/sales.html
@@ -14,12 +14,12 @@
             <h4>Sales Information</h4>
             <nav>
                 <ul class="sidenav">
-                    <li><a href="index.html" class="nav-link">HOME</a><br /></li>
-                    <li><a href="cookie.html" class="nav-link">COOKIES</a><br /></li>
-                    <li><a href="shop.html" class="nav-link">SHOP</a><br /></li>
-                    <li><a href="about.html" class="nav-link">ABOUT</a><br /></li>
-                    <li><a href="locations" class="nav-link">LOCATIONS</a><br /></li>
-                    <li><a href="sales.html" class="nav-link">SALES</a><br /></li>
+                    <li><a href="/index.html" class="nav-link">HOME</a><br /></li>
+                    <li><a href="/cookies.html" class="nav-link">COOKIES</a><br /></li>
+                    <li><a href="/shop.html" class="nav-link">SHOP</a><br /></li>
+                    <li><a href="/about.html" class="nav-link">ABOUT</a><br /></li>
+                    <li><a href="/locations.html" class="nav-link">LOCATIONS</a><br /></li>
+                    <li><a href="/sales.html" class="nav-link">SALES</a><br /></li>
                 </ul>
             </nav>
       </header>
@@ -110,7 +110,6 @@
         <br>
              <div>
                     <img src="http://www.earthlingenterprises.ca/earthlingenterprises/Media/animated%20salmon.gif">
-                    <span>We are proud to serve Seattle more than a decade....</span>
              </div>
               <footer>
            <script src="/js/sales.js"></script>
